manifests/backend-ai/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-care-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history-care-ai
  template:
    metadata:
      labels:
        app: history-care-ai
    spec:
      containers:
        - name: history-care-ai
          image: history-care-ai:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
