manifests/backend-ai/service.yml
apiVersion: v1
kind: Service
metadata:
  name: history-care-ai
spec:
  selector:
    app: history-care-ai
  ports:
    - name: http
      port: 3000
      targetPort: 3000
